# api_futebol

./: README.md  pyproject.toml
src/ETL/: extract.py
