[tool.poetry]
name = "api-futebol"
version = "1.0"
description = "Projeto que carrega dados de futebol de uma api, realiza algumas transformações, salva em um dataset e exporta para um arquivo CSV."
authors = ["datafoia <datafoia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
